--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -13,6 +13,7 @@
   @media (min-width: @desktop-width) {
     padding: 70px 110px 75px;
     flex-direction: row;
+    column-gap: 227px;
     justify-content: space-between;
     background-image: linear-gradient(to bottom, #ffffff 205px, @bg-color-submain 205px);
   }
@@ -29,8 +30,8 @@
   }
 
   @media (min-width: @desktop-width) {
-    min-width: 0;
-    width: 433px;
+    min-width: 433px;
+    max-width: 50%;
     padding-bottom: 0;
   }
 }
