--- a/source/less/blocks/cat-info.less
+++ b/source/less/blocks/cat-info.less
@@ -11,6 +11,7 @@
 
   @media (min-width: @desktop-width) {
     padding: 0;
+    flex-grow: 1;
   }
 }
 
@@ -18,10 +19,6 @@
   display: flex;
   gap: 14px;
   align-items: center;
-
-  @media (min-width: @desktop-width) {
-    width: 569px;
-  }
 }
 
 .cat-info__label {
