--- a/source/less/blocks/cat-owner.less
+++ b/source/less/blocks/cat-owner.less
@@ -48,7 +48,7 @@
 
   @media (min-width: @desktop-width) {
     left: 110px;
-    width: 1330px;
+    width: calc(100% - 110px);
   }
 }
 
@@ -107,6 +107,7 @@
 
   @media (min-width: @desktop-width) {
     width: 569px;
+    flex-grow: 1;
   }
 }
 
